deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
            - name: logs-volume
              mountPath: /var/log/nginx
      volumes:
        - name: html-volume
          persistentVolumeClaim:
            claimName: nginx-html-pvc
        - name: logs-volume
          persistentVolumeClaim:
            claimName: nginx-logs-pvc
